# unisa

./: README.md
1_anno/Analisi1/: teoria_e_dimostrazioni.docx
1_anno/Calcolatori_Elettronici/esercizi/: Esercizi_memorie.docx
1_anno/Calcolatori_Elettronici/mips_assembly/: Esercizio 1_2.asm  Esercizio_0.asm  Esercizio_1.asm  Esercizio_2.asm  Esercizio_2_2  busy_waiting.asm  driver_exa.asm  driver_password.asm  driver_prova_finale.asm  driver_sim_finale.asm  esercizio_3.asm  ex_2_slide.asm  ex_3_slide.asm  ex_3_slide_chatgpt.asm  ex_4_slide.s  ex_5.asm  ex_6.asm  ex_i_0.asm  ex_intercorso.asm  ex_intercorso_stack.asm
1_anno/Geometria_Algebra_Logica/esercizi_matlab/: 10_Sottospazion_ortho_span.mlx  13_Prolungamento_2.mlx  14_Prolungamento_1.mlx  3_Sottospazio_ortogonale_a_W_cart_con_prod_scal_standard.mlx  4_basi_ortonormali.mlx  5_Base_ortonormale_r3.mlx  7_omomorfismo_ker_ima.mlx  7a_omomorfismi_ker.mlx  8_Omomorfismi_parametro.mlx  Esercizio_2_sottospazi_ortho_non_standard.mlx  gram_schmidt.mlx  (+3 more)
2_anno/Algoritmi_Strutture_Dati/codice/6.Simulazioni prova completa/2021_02_11_prova_esame_cp/: CMakeLists.txt  TArray.h  TBST.c  TBST.h  THT.h  TInfo.h  TList.c  TList.h  main.c
2_anno/Algoritmi_Strutture_Dati/codice/6.Simulazioni prova completa/2022_03_01_prova_Esame/: CMakeLists.txt  TArray.c  TArray.h  TBST.c  TBST.h  THT.c  THT.h  TInfo.c  TInfo.h  TList.c  TList.h  main.c
2_anno/Algoritmi_Strutture_Dati/codice/6.Simulazioni prova completa/2023_04_19_prova_esame/: CMakeLists.txt  TBST.c  TBST.h  THT.c  THT.h  TInfo.c  TInfo.h  TList.c  TList.h  main.c
(+1432 files in other folders)
